--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ certifi==2018.4.16
 chardet==3.0.4
 click==6.7
 dominate==2.3.1
-Flask==0.12.2
+elasticsearch==6.3.1
+Flask==0.12.3
 Flask-Babel==0.11.2
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.4.1
